# Sensor-communication

./: README.md
Hw9/: CMakeLists.txt  analyser.cpp  analyser.h  loger.cpp  loger.h  main.cpp  sensor.cpp  sensor.h  sensormetric.cpp  sensormetric.h
